Ny push för små fix

--- a/Bankapp/Pages/Home.razor
+++ b/Bankapp/Pages/Home.razor
@@ -3,27 +3,8 @@
 <!-- Displays the Home page -->
 <PageTitle>Suedbank</PageTitle>
 
-<style>
-    .Texthome{
-        height: 100vh;      
-        
-        
-        max-width: 100%;
-        object-fit: cover;
-        
-    }
-    .Background{
-        background-image: url('/stonks-meme-template-1152x648.jpg');
-        opacity: 0.5;
-        background-repeat: no-repeat;
-        background-position:
-    }
-</style>
-
-@* <img src="/stonks-meme-template-1152x648.jpg" class="background-image" alt="Background" /> *@
-<div class="Background">
-    <div class="Texthome">
-        <h1>Welcome to Suedbank </h1>
-        <h4> With a CEO who DOESN'T mess with your money!</h4>
-    </div>
+<div class="home-page">
+<h1 class="h1-home">Welcome to Suedbank </h1>
+<h4 class="h4-home"> Totaly NOT a rip-off of another bank</h4>
+<h5 class="h5-home"> Create your account and make transfers, deposits and withdrawls freely!</h5>
 </div>
