--- a/Bankapp/wwwroot/css/app.css
+++ b/Bankapp/wwwroot/css/app.css
@@ -213,21 +213,33 @@ code {
 }
 .h1-home {
     font-family: 'Agency FB';
-    font-weight: 500;
-    font-size: 500%;    
+    font-weight: 400;
+    font-size: 350%;    
     text-align: center;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
 }
 .h4-home {
     font-family: 'Cambria Math';
     font-weight: 200;
-    font-size: 300%;
+    font-size: 150%;
     text-align: center;    
 }
 .h5-home {
     font-family: 'Cambria Math';
     font-weight: 100;
-    font-size: 200%;
+    font-size: 100%;
     text-align: center;
-    margin-top: 5rem;
+    margin-top: 1rem;
+}
+.login-form {
+    text-align: center;
+    margin-top: 2rem;
+}
+.btn-sm {    
+    font-size: 87%;
+    font-weight: bold;
+    body-font-size: 1rem;
+
+    
+    
 }
